force-app/main/default/objects/Completeness_Rule__mdt/Completeness_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Completeness Rule</label>
    <pluralLabel>Completeness Rules</pluralLabel>
</CustomObject>