force-app/main/default/objects/Completeness_Rule__mdt/fields/Apex_Handler__c.field-meta.xml
<CustomField>
    <fullName>Apex_Handler__c</fullName>
    <label>Apex Handler Class</label>
    <type>Text</type>
    <length>255</length>
    <description>For Custom_Apex rules: name of an Apex class implementing CompletenessRuleProvider for complex logic the engine cannot express declaratively</description>
</CustomField>