force-app/main/default/objects/Completeness_Rule__mdt/fields/Applies_To_Line_Group__c.field-meta.xml
<CustomField>
    <fullName>Applies_To_Line_Group__c</fullName><label>Applies To Line Group</label><type>Text</type><length>100</length>
    <description>Optional. For line-item rules scoped to a group, e.g. worker type "Registered Nurse".</description>
</CustomField>