force-app/main/default/objects/Completeness_Rule__mdt/fields/Applies_To_Line_Key__c.field-meta.xml
<CustomField>
    <fullName>Applies_To_Line_Key__c</fullName><label>Applies To Line Key</label><type>Text</type><length>100</length>
    <description>Optional. For line-item rules: the Line_Key this rule targets, e.g. RN_LABOUR_COST. Blank = applies to the whole form.</description>
</CustomField>