force-app/main/default/objects/Completeness_Rule__mdt/fields/Applies_To_Object__c.field-meta.xml
<CustomField>
    <fullName>Applies_To_Object__c</fullName>
    <label>Applies To Object</label>
    <type>Text</type>
    <length>255</length>
    <description>API name of the object this rule evaluates, e.g. Case</description>
</CustomField>