force-app/main/default/objects/Completeness_Rule__mdt/fields/Applies_To_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Applies_To_RecordType__c</fullName>
    <label>Applies To Record Type</label>
    <type>Text</type>
    <length>255</length>
    <description>Optional. Developer name of the record type this rule applies to. Blank = all record types.</description>
</CustomField>