force-app/main/default/objects/Completeness_Rule__mdt/fields/Compare_To_Prior__c.field-meta.xml
<CustomField>
    <fullName>Compare_To_Prior__c</fullName><label>Compare To Prior Period</label><type>Checkbox</type><defaultValue>false</defaultValue>
    <description>For Plausibility rules. If true, the engine also gathers the prior-period value for quarter-on-quarter comparison.</description>
</CustomField>