force-app/main/default/objects/Completeness_Rule__mdt/fields/Condition_Logic__c.field-meta.xml
<CustomField>
    <fullName>Condition_Logic__c</fullName>
    <label>Condition Logic</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>Optional. A simple condition that must be true for this rule to apply, e.g. Funding_Tier__c >= 3. Leave blank to always apply.</description>
</CustomField>