force-app/main/default/objects/Completeness_Rule__mdt/fields/Expected_Range_High__c.field-meta.xml
<CustomField>
    <fullName>Expected_Range_High__c</fullName><label>Expected Range High</label><type>Number</type><precision>16</precision><scale>2</scale>
    <description>For Plausibility rules. Upper bound of the sensible range.</description>
</CustomField>