force-app/main/default/objects/Completeness_Rule__mdt/fields/Expected_Range_High_Key__c.field-meta.xml
<CustomField>
    <fullName>Expected_Range_High_Key__c</fullName><label>Expected Range High Key</label><type>Text</type><length>100</length>
    <description>Optional. A line key whose value is used as the upper bound. Overrides the static Expected Range High when set.</description>
</CustomField>