force-app/main/default/objects/Completeness_Rule__mdt/fields/Expected_Range_Low__c.field-meta.xml
<CustomField>
    <fullName>Expected_Range_Low__c</fullName><label>Expected Range Low</label><type>Number</type><precision>16</precision><scale>2</scale>
    <description>For Plausibility rules. Lower bound of the sensible range (e.g. award-minimum hourly rate).</description>
</CustomField>