force-app/main/default/objects/Completeness_Rule__mdt/fields/Expected_Range_Low_Key__c.field-meta.xml
<CustomField>
    <fullName>Expected_Range_Low_Key__c</fullName><label>Expected Range Low Key</label><type>Text</type><length>100</length>
    <description>Optional. A line key whose value is used as the lower bound (e.g. a mandated target line). Overrides the static Expected Range Low when set.</description>
</CustomField>