force-app/main/default/objects/Completeness_Rule__mdt/fields/Gap_Message__c.field-meta.xml
<CustomField>
    <fullName>Gap_Message__c</fullName>
    <label>Gap Message</label>
    <type>LongTextArea</type>
    <length>500</length>
    <description>Plain-English message shown when this requirement is not met, e.g. Income evidence is required for funding tier 3 and above.</description>
</CustomField>