force-app/main/default/objects/Completeness_Rule__mdt/fields/Plausibility_Metric__c.field-meta.xml
<CustomField>
    <fullName>Plausibility_Metric__c</fullName><label>Plausibility Metric</label><type>LongTextArea</type><length>1000</length><visibleLines>2</visibleLines>
    <description>For Plausibility rules. The metric the engine computes and hands to the agent, e.g. "RN_LABOUR_COST / RN_HOURS" (implied hourly rate).</description>
</CustomField>