force-app/main/default/objects/Completeness_Rule__mdt/fields/Prior_Variance_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Prior_Variance_Threshold__c</fullName><label>Prior Variance Threshold</label><type>Number</type><precision>5</precision><scale>2</scale>
    <description>For Plausibility rules. Percent swing vs prior period that warrants a flag, e.g. 15 means flag a >15% change.</description>
</CustomField>