force-app/main/default/objects/Completeness_Rule__mdt/fields/Reconciliation_Expression__c.field-meta.xml
<CustomField>
    <fullName>Reconciliation_Expression__c</fullName><label>Reconciliation Expression</label><type>LongTextArea</type><length>1000</length><visibleLines>2</visibleLines>
    <description>For Reconciliation rules. An equation using line keys, e.g. "RN_LABOUR_COST / RN_HOURS = IMPLIED_RATE" or "STAFF_COSTS + OTHER_COSTS = TOTAL_EXPENDITURE". The engine evaluates both sides and compares within tolerance.</description>
</CustomField>