force-app/main/default/objects/Completeness_Rule__mdt/fields/Regulatory_Reference__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Reference__c</fullName>
    <label>Regulatory Reference</label>
    <type>Text</type>
    <length>255</length>
    <description>Optional citation for audit trail, e.g. Aged Care Act 1997 s.44-5</description>
</CustomField>