force-app/main/default/objects/Completeness_Rule__mdt/fields/Required_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Required_Document_Type__c</fullName>
    <label>Required Document Type</label>
    <type>Text</type>
    <length>255</length>
    <description>For Document_Required rules: the document type/title that must be attached</description>
</CustomField>