force-app/main/default/objects/Completeness_Rule__mdt/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <description>What kind of completeness check this rule performs</description>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Field_Required</fullName><default>true</default><label>Field Required</label></value>
            <value><fullName>Document_Required</fullName><default>false</default><label>Document Required</label></value>
            <value><fullName>Related_Record_Required</fullName><default>false</default><label>Related Record Required</label></value>
            <value><fullName>Reconciliation</fullName><default>false</default><label>Reconciliation</label></value>
            <value><fullName>Plausibility</fullName><default>false</default><label>Plausibility</label></value>
            <value><fullName>Custom_Apex</fullName><default>false</default><label>Custom Apex</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>