force-app/main/default/objects/Completeness_Rule__mdt/fields/Sector_Benchmark__c.field-meta.xml
<CustomField>
    <fullName>Sector_Benchmark__c</fullName><label>Sector Benchmark</label><type>Text</type><length>255</length>
    <description>For Plausibility rules. Human-readable benchmark context given to the agent, e.g. "65-75% typical for residential aged care".</description>
</CustomField>