force-app/main/default/objects/Completeness_Rule__mdt/fields/Target_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_API__c</fullName>
    <label>Target Field API Name</label>
    <type>Text</type>
    <length>255</length>
    <description>For Field_Required rules: the API name of the field that must be populated, e.g. Income_Evidence__c</description>
</CustomField>