force-app/main/default/objects/Completeness_Rule__mdt/fields/Tolerance_Percent__c.field-meta.xml
<CustomField>
    <fullName>Tolerance_Percent__c</fullName><label>Tolerance Percent</label><type>Number</type><precision>5</precision><scale>2</scale>
    <description>For Reconciliation rules. Allowed variance as a percent, e.g. 2.0 means the two sides may differ by up to 2%.</description>
</CustomField>