force-app/main/default/objects/Completeness_Rule__mdt/fields/Trigger_Status__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Status__c</fullName>
    <label>Trigger Status</label>
    <type>Text</type>
    <length>255</length>
    <description>The status value that triggers this completeness check, e.g. Submitted</description>
</CustomField>